--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
     --color-dark: #161616;
 }
 
+body {}
+
 
 /* Auth styles: start */
 .auth .auth-cover {
@@ -76,3 +78,18 @@ header .nav .nav-link .active {
 }
 
 /* badges: end */
+
+/* profile covr: start */
+.profile-cover .cover-img {
+    width: 100%;
+    height: 50dvh;
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .profile-cover .cover-img {
+        height: 30vh;
+    }
+}
+
+/* profile covr: end */
